--- a/styles/foobar.css
+++ b/styles/foobar.css
@@ -81,3 +81,11 @@ summary,
   padding: 1rem;
   margin: 2rem;
 }
+
+.foobar-challenge {
+  margin: 1rem 0 2rem 1rem;
+}
+
+.foobar-task {
+  margin: 1rem 0 2rem 1rem;
+}
