--- a/styles/foobar.css
+++ b/styles/foobar.css
@@ -79,13 +79,5 @@ summary,
   background-color: #111111;
   color: #fff;
   padding: 1rem;
-  margin: 2rem;
-}
-
-.foobar-challenge {
-  margin: 1rem 0 2rem 1rem;
-}
-
-.foobar-task {
-  margin: 1rem 0 2rem 1rem;
+  margin: 2rem 0;
 }
