--- a/styles/foobar.css
+++ b/styles/foobar.css
@@ -15,13 +15,14 @@ html {
   -webkit-text-size-adjust: none; /* for iOS Safari */
   text-size-adjust: none; /* for other mobile browsers */
   font-family: Arial, Helvetica, sans-serif;
+  scroll-padding-top: 6rem;
 }
 
 body {
   font-size: 1.6rem;
   background-color: rgb(32, 33, 36);
   color: #e8eaed;
-  max-width: 80rem;
+  max-width: 100rem;
   margin: auto;
   padding: 1.6rem;
 }
@@ -80,4 +81,51 @@ summary,
   color: #fff;
   padding: 1rem;
   margin: 2rem 0;
+}
+
+.code_syntax {
+  padding: 1rem;
+}
+
+p {
+  text-align: justify;
+}
+
+.table-of-contents {
+  position: sticky;
+  overflow: hidden;
+  background-color: rgb(32, 33, 36);
+  border-bottom: solid 1px #444;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.toc-layer1 {
+  top: 0;
+  height: 3rem;
+  z-index: 5;
+}
+
+.toc-layer2 {
+  top: 3rem;
+  height: 3rem;
+  z-index: 4;
+}
+
+.table-of-contents a {
+  color: rgb(137, 156, 212);
+  text-align: center;
+  padding: 0;
+  padding: 0 1rem;
+  height: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.table-of-contents a:hover {
+  background-color: #ddd;
+  color: rgb(35, 39, 51);
 }
