--- a/styles/foobar.css
+++ b/styles/foobar.css
@@ -15,7 +15,7 @@ html {
   -webkit-text-size-adjust: none; /* for iOS Safari */
   text-size-adjust: none; /* for other mobile browsers */
   font-family: Arial, Helvetica, sans-serif;
-  scroll-padding-top: 4rem;
+  scroll-padding-top: 3rem;
 }
 
 body {
@@ -24,7 +24,10 @@ body {
   color: #e8eaed;
   max-width: 90rem;
   margin: auto;
-  padding: 1.6rem;
+}
+
+main {
+  padding: 0 1rem;
 }
 
 img {
@@ -128,6 +131,37 @@ p {
 .table-of-contents a:hover {
   background-color: #ddd;
   color: rgb(35, 39, 51);
+}
+
+pre {
+  overflow: hidden;
+  max-height: 50rem;
+  min-height: 10rem;
+  height: 10rem;
+  position: relative;
+  color: #d1d1d1;
+  background: black;
+}
+
+.no-before {
+  overflow: auto;
+  height: auto;
+}
+
+pre::before {
+  content: "---Click to reveal code---";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #000000;
+  top: 0;
+  left: 0;
+  text-align: center;
+  padding-top: 4rem;
+}
+
+.no-before::before {
+  display: none;
 }
 
 @media only screen and (max-width: 500px) {
