--- a/styles/nav.css
+++ b/styles/nav.css
@@ -22,6 +22,15 @@ header nav a {
   color: white;
   margin: 0 0 0 1rem;
   text-decoration: none;
+  word-wrap: normal;
+}
+
+.icon-link {
+  height: 1.6rem;
+}
+
+header nav a img {
+  height: 1.6rem;
 }
 
 header nav a:hover {
@@ -37,14 +46,32 @@ header nav a:hover {
   text-decoration: underline;
 }
 
-#lachlan-nav-text {
-  white-space: nowrap;
+.icon-container {
+  display: flex;
+  margin: 0 0 0 1rem;
+  padding: 0 0 0 0;
+  flex-wrap: wrap;
+  /* border-left: solid 0.1rem white; */
+  height: fit-content;
+  min-width: 3rem;
+}
+
+.icon-container a {
+  margin: 0.2rem 0.4rem 0.2rem 0;
+  padding: 0;
+}
+
+.icon-container img {
+  margin: 0;
+  padding: 0;
+}
+
+#github-icon {
+  filter: brightness(0) invert(1);
 }
 
 @media only screen and (max-width: 400px) {
-  #lachlan-nav-text {
-    font-size: 1rem;
-    width: 3rem;
-    white-space: normal;
+  #navbar-icon {
+    display: none;
   }
 }
