--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,3 +1,87 @@
+/*
+Boiler plate from
+https://blog.logrocket.com/what-should-modern-css-boilerplate-look-like/
+*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  border: none;
+}
+
+html {
+  font-size: 62.5%; /* (62.5/100) * 16px = 10px */
+  -webkit-text-size-adjust: none; /* for iOS Safari */
+  text-size-adjust: none; /* for other mobile browsers */
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-y: scroll;
+}
+
+body {
+  font-size: 1.6rem;
+  background-color: rgb(32, 33, 36);
+  color: #e8eaed;
+  margin: auto;
+  max-width: 100rem;
+}
+
+main {
+  padding: 0 1rem;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+menu:not(article menu),
+ol:not(article ol),
+ul:not(article ul) {
+  list-style: none;
+}
+
+menu,
+ol,
+ul {
+  padding-left: 0;
+}
+
+article ol,
+article ul {
+  list-style-position: inside;
+}
+
+a {
+  text-underline-position: under;
+  text-decoration-thickness: 8;
+  text-decoration: none;
+}
+
+:focus:not(:focus-visible) {
+  outline: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
+
+label,
+button,
+select,
+summary,
+[type="radio"],
+[type="submit"],
+[type="checkbox"] {
+  cursor: pointer;
+}
+
+p {
+  text-align: justify;
+}
+
 header nav {
   display: flex;
   height: 6rem;
