--- a/styles/blog/blog-index.css
+++ b/styles/blog/blog-index.css
@@ -8,6 +8,7 @@
 
 .blog-section-div {
   min-width: 12.8rem;
+  position: relative;
 }
 
 .blog-list-div img {
@@ -17,28 +18,40 @@
 
 .blog-section-div p {
   text-align: start;
-  margin: 1rem 0 0 0;
+  margin: 0 0 0.3rem 0;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 .blog-section-div a {
   text-underline-position: under;
   text-decoration-thickness: 0.1rem;
-  /* color: rgb(124, 212, 179); */
-  color: rgb(76, 192, 212);
+  color: black;
   text-decoration: underline;
 }
 
 .blog-section-div span {
   font-style: italic;
+  font-size: 1rem;
 }
 
-@media only screen and (max-width: 600px) {
+.blog-section-caption-div {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+  padding: 0.5rem;
+  width: fit-content;
+  position: absolute;
+  bottom: 0;
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 700px) {
   .blog-list-div {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 500px) {
   .blog-list-div {
     grid-template-columns: 1fr;
   }
