--- a/styles/blog/evil-genius-minion-ready.css
+++ b/styles/blog/evil-genius-minion-ready.css
@@ -24,22 +24,21 @@
 
 .chat-user-div img {
   width: 100%;
-  border-radius: 2px;
+  border-radius: 0.2rem;
   overflow: hidden;
 }
 
 .chat-user-div {
-  margin: 0;
-  width: 30px;
-  height: 30px;
-  border-radius: 2px;
-  margin-right: 2rem;
+  margin: 0 2rem 0 0;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.2rem;
   flex-shrink: 0;
 }
 
 .user-div,
 .gpt-div {
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 0.1rem 1rem;
 }
 
 .message-block-div {
@@ -51,6 +50,7 @@
 
 .chat-text-div p {
   margin: 0 0 2rem 0;
+  text-align: start;
 }
 
 .chat-text-div ol,
@@ -76,4 +76,18 @@
 
 .chat-text-div li p {
   margin: 0;
+}
+
+@media only screen and (max-width: 450px) {
+  .message-block-div {
+    display: block;
+  }
+  .chat-user-div {
+    float: left;
+    margin: 0.5rem 1rem 0 0;
+  }
+  .user-div,
+  .gpt-div {
+    padding: 1rem 1rem 0.1rem 1rem;
+  }
 }
