--- a/styles/nav.css
+++ b/styles/nav.css
@@ -56,8 +56,15 @@ article ul {
 
 a {
   text-underline-position: under;
-  text-decoration-thickness: 8;
+  text-decoration-thickness: 0.1rem;
+  /* color: rgb(124, 212, 179); */
+  color: rgb(76, 192, 212);
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 0.1rem;
 }
 
 :focus:not(:focus-visible) {
