add tic tac toe AI checkboxes

--- a/src/games/tictactoe/GameTicTacToe.css
+++ b/src/games/tictactoe/GameTicTacToe.css
@@ -68,6 +68,15 @@
   cursor: pointer;
 }
 
+.checkbox-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 90%;
+  max-width: 500px;
+}
+
 .cell:hover::before {
   content: "";
   display: none;
