--- a/src/games/tictactoe/GameTicTacToe.css
+++ b/src/games/tictactoe/GameTicTacToe.css
@@ -74,7 +74,14 @@
   justify-content: center;
   margin: 0 auto;
   width: 90%;
-  max-width: 500px;
+}
+
+.checkbox-div label {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 1rem;
+  background-color: #333;
+  padding: 1rem;
 }
 
 .cell:hover::before {
