--- a/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.css
+++ b/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.css
@@ -62,7 +62,7 @@ html {
   color: rgb(35, 39, 51);
 }
 
-pre {
+.python-code {
   overflow: hidden;
   min-height: 10rem;
   height: 10rem;
@@ -77,7 +77,7 @@ pre {
   height: auto;
 }
 
-pre::before {
+.python-code::before {
   content: "---Click to reveal code---";
   width: 100%;
   height: 100%;
