--- a/src/games/tictactoe/GameTicTacToe.css
+++ b/src/games/tictactoe/GameTicTacToe.css
@@ -1,4 +1,3 @@
-/* Board styling */
 .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -23,31 +22,48 @@
   align-items: center;
 }
 
-/* Cell styling */
 .cell {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 8rem;
   font-weight: bold;
-  background-color: #fff;
   border: 2px solid #333;
   cursor: pointer;
   width: 100%;
   aspect-ratio: 1 / 1;
 }
 
-/* Player X styling */
-.cell.x {
+.cell:not(.winning-cell) {
+  transition: background-color 0.3s ease;
+  background-color: #fff;
+}
+
+.cell.game-over.cell:not(.winning-cell) {
+  color: rgba(0, 0, 0, 0.3);
+  transition: color 0.3s ease;
+}
+
+.cell.x:not(.game-over) {
   color: #df4444;
+  transition: color 0.3s ease;
 }
 
-/* Player O styling */
-.cell.o {
+.winning-cell.x {
+  color: #df4444;
+  transition: color 0.3s ease;
+}
+
+.cell.o:not(.game-over) {
   color: #4444ce;
+  transition: color 0.3s ease;
 }
 
-/* Winner styling */
+.winning-cell.o {
+  color: #4444ce;
+  transition: color 0.3s ease;
+}
+
 .winner {
   font-size: 32px;
   font-weight: bold;
@@ -55,7 +71,6 @@
   margin-top: 20px;
 }
 
-/* Reset button styling */
 .reset-button {
   display: block;
   margin: 20px auto;
@@ -96,6 +111,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.winning-cell {
+  background-color: #75cc96;
+  transition: background-color 0.3s ease;
 }
 
 @media only screen and (max-width: 400px) {
