--- a/src/games/tictactoe/GameTicTacToe.css
+++ b/src/games/tictactoe/GameTicTacToe.css
@@ -104,9 +104,10 @@
   display: none;
 }
 
-.cell:not(.x, .o, .game-over):hover::before {
+.cell:not(.x, .o, .game-over, .ai-turn):hover::before,
+.cell.ai-consider-cell:not(.x, .o, .game-over)::before {
   content: attr(data-hover);
-  color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.2);
   font-size: 8rem;
   display: flex;
   align-items: center;
