--- a/src/blog/articles/ArticleEvilGeniusMinionReady/ArticleEvilGeniusMinionReady.module.css
+++ b/src/blog/articles/ArticleEvilGeniusMinionReady/ArticleEvilGeniusMinionReady.module.css
@@ -1,34 +1,34 @@
-.conversation-div {
+.conversationDiv {
   font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto,
     Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   background-color: rgb(52, 53, 65);
 }
 
-.conversation-header {
+.conversationHeader {
   display: flex;
   justify-content: center;
   gap: 0.8rem;
   padding: 1rem;
 }
 
-.gpt-div,
-.conversation-header {
+.gptDiv,
+.conversationHeader {
   background-color: rgb(68, 70, 84);
 }
 
-.chatgpt-logo-div {
+.chatgptLogoDiv {
   background-color: rgb(171, 104, 255);
   padding: 4px;
 }
 
-.chat-user-div img {
+.chatUserDiv img {
   width: 100%;
   border-radius: 0.2rem;
   overflow: hidden;
 }
 
-.chat-user-div {
+.chatUserDiv {
   margin: 0 2rem 0 0;
   width: 3rem;
   height: 3rem;
@@ -36,49 +36,49 @@
   flex-shrink: 0;
 }
 
-.user-div,
-.gpt-div {
+.userDiv,
+.gptDiv {
   padding: 2rem 1rem 0.1rem 1rem;
 }
 
-.message-block-div {
+.messageBlockDiv {
   width: 100%;
   max-width: 60rem;
   margin: auto;
   display: flex;
 }
 
-.chat-text-div p {
+.chatTextDiv p {
   margin: 0 0 2rem 0;
   text-align: start;
 }
 
-.chat-text-div ol,
-.chat-text-div ul {
+.chatTextDiv ol,
+.chatTextDiv ul {
   display: flex;
   flex-direction: column;
   padding: 0 0 0 1.6rem;
   margin: 0 0 2rem 0;
 }
 
-.chat-text-div ol {
+.chatTextDiv ol {
   list-style: decimal;
 }
 
-.chat-text-div ul {
+.chatTextDiv ul {
   list-style: disc;
 }
 
-.chat-text-div li {
+.chatTextDiv li {
   margin: 0;
   padding: 0 0 0.6rem 0.6rem;
 }
 
-.chat-text-div li p {
+.chatTextDiv li p {
   margin: 0;
 }
 
-#conversation-contents {
+#conversationContents {
   display: inline-flex;
   flex-direction: column;
   justify-content: space-around;
@@ -88,7 +88,7 @@
   padding: 0;
 }
 
-#conversation-contents a {
+#conversationContents a {
   padding: 0.5rem 1rem;
   text-align: center;
   width: 100%;
@@ -96,31 +96,31 @@
   color: rgb(137, 156, 212);
 }
 
-#conversation-contents a:hover {
+#conversationContents a:hover {
   background-color: #ddd;
   color: rgb(35, 39, 51);
 }
 
-.contents-div {
+.contentsDiv {
   display: flex;
   justify-content: center;
 }
 
-#conversation-contents h3 {
+#conversationContents h3 {
   margin: 1rem;
   text-align: center;
 }
 
 @media only screen and (max-width: 450px) {
-  .message-block-div {
+  .messageBlockDiv {
     display: block;
   }
-  .chat-user-div {
+  .chatUserDiv {
     float: left;
     margin: 0.5rem 1rem 0 0;
   }
-  .user-div,
-  .gpt-div {
+  .userDiv,
+  .gptDiv {
     padding: 1rem 1rem 0.1rem 1rem;
   }
 }
