--- a/src/games/connectfour/GameConnectFour.module.css
+++ b/src/games/connectfour/GameConnectFour.module.css
@@ -31,6 +31,14 @@
   padding: 10%;
 }
 
+.circle.R {
+  background-color: red;
+}
+
+.circle.Y {
+  background-color: yellow;
+}
+
 .cell {
   background-color: rgb(80, 80, 80);
 }
@@ -54,4 +62,16 @@ circle.red {
 
 circle.yellow {
   background-color: yellow;
+}
+
+.resetButton {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
