--- a/src/games/connectfour/GameConnectFour.module.css
+++ b/src/games/connectfour/GameConnectFour.module.css
@@ -2,10 +2,10 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr, 6fr;
-  width: min(90%, 600px);
+  width: min(95%, 600px);
   margin: 0 auto;
   background-color: white;
-  padding: 2rem;
+  padding: min(0.5rem, 1%);
   border-radius: 5%;
 }
 
@@ -22,7 +22,7 @@
   grid-template-rows: 1fr;
   border-radius: 4%;
   overflow: hidden;
-  border: solid 1rem black;
+  border: solid min(1rem, 2vw) black;
 }
 
 .cell,
@@ -53,7 +53,7 @@
 }
 
 .circle:not(.slotCell .circle) {
-  border: 0.5rem solid rgb(0, 0, 0);
+  border: min(0.5rem, 1.5vw) solid rgb(0, 0, 0);
 }
 
 circle.red {
