--- a/src/games/connectfour/GameConnectFour.module.css
+++ b/src/games/connectfour/GameConnectFour.module.css
@@ -17,6 +17,7 @@
 }
 
 .slots {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 1fr;
@@ -74,4 +75,26 @@ circle.yellow {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+.aiDifficulty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkboxDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.checkboxDiv label {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 1rem;
+  background-color: #333;
+  padding: 1rem;
 }
