--- a/src/games/tictactoe/GameTicTacToe.module.css
+++ b/src/games/tictactoe/GameTicTacToe.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 0.6rem;
+  gap: 0.2rem;
   width: 90%;
   max-width: 500px;
   margin: 0 auto;
@@ -71,38 +71,19 @@
   margin-top: 20px;
 }
 
-.resetButton {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
 .aiDifficulty {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .checkboxDiv {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
-  width: 90%;
-}
-
-.checkboxDiv label {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0.6rem;
-  background-color: #333;
-  padding: 0.6rem;
+  gap: 0.2rem;
+  margin: 1rem;
 }
 
 .cell:hover::before {
