--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,13 @@ https://blog.logrocket.com/what-should-modern-css-boilerplate-look-like/
 html {
   -webkit-text-size-adjust: none; /* for iOS Safari */
   text-size-adjust: none; /* for other mobile browsers */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Outfit", sans-serif;
   overflow-y: scroll;
 }
 
 body {
   font-size: 1rem;
-  background-color: rgb(32, 33, 36);
+  background-color: rgb(24, 37, 54);
   color: #e8eaed;
   max-width: 62.5rem;
   margin: auto;
