--- a/src/blog/articles/connectfour/GameConnectFour.module.css
+++ b/src/blog/articles/connectfour/GameConnectFour.module.css
@@ -13,7 +13,8 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 1fr;
-  border: 1rem solid transparent;
+  border-left: min(0.25rem, 1vw) solid transparent;
+  border-right: min(0.25rem, 1vw) solid transparent;
 }
 
 .slots {
@@ -23,13 +24,13 @@
   grid-template-rows: 1fr;
   border-radius: 4%;
   overflow: hidden;
-  border: solid min(1rem, 2vw) black;
+  border: solid min(0.25rem, 1vw) black;
 }
 
 .cell,
 .slotCell {
   aspect-ratio: 1 / 1;
-  padding: 10%;
+  padding: 12%;
 }
 
 .circle.R {
@@ -54,14 +55,22 @@
 }
 
 .circle:not(.slotCell .circle) {
-  border: min(0.5rem, 1.5vw) solid rgb(0, 0, 0);
+  border: min(0.25rem, 1vw) solid black;
 }
 
-circle.red {
+.slotCell .circle.R {
+  border: min(0.1rem, 0.5vw) solid rgb(200, 0, 0);
+}
+
+.slotCell .circle.Y {
+  border: min(0.1rem, 0.5vw) solid rgb(200, 200, 0);
+}
+
+.circle.R {
   background-color: red;
 }
 
-circle.yellow {
+.circle.Y {
   background-color: yellow;
 }
 
@@ -85,16 +94,9 @@ circle.yellow {
 
 .checkboxDiv {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
   justify-content: center;
-  margin: 0 auto;
-  width: 90%;
-}
-
-.checkboxDiv label {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 1rem;
-  background-color: #333;
-  padding: 1rem;
+  gap: 0.2rem;
+  margin: 1rem 1rem 0.5rem 0;
 }
