--- a/src/blog/articles/tictactoe/GameTicTacToe.module.css
+++ b/src/blog/articles/tictactoe/GameTicTacToe.module.css
@@ -76,7 +76,7 @@
 .checkboxDiv {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   gap: 0.2rem;
   margin: 1rem;
@@ -97,8 +97,13 @@
   justify-content: center;
 }
 
-.winningCell {
-  background-color: #75cc96;
+.winningCell.o {
+  background-color: #9ddfc9;
+  transition: background-color 0.3s ease;
+}
+
+.winningCell.x {
+  background-color: #ece4b2;
   transition: background-color 0.3s ease;
 }
 
