--- a/src/blog/Blog.css
+++ b/src/blog/Blog.css
@@ -1,19 +1,25 @@
 .blog-list-div {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 710px) {
   .blog-list-div {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 550px) {
   .blog-list-div {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .blog-list-div {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
