--- a/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.module.css
+++ b/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.module.css
@@ -1,5 +1,5 @@
 html {
-  scroll-padding-top: 1.875rem;
+  scroll-padding-top: 1.75rem;
 }
 
 .foobarTaskDescription {
@@ -14,11 +14,11 @@ html {
 
 .tableOfContents {
   position: sticky;
-  background-color: rgb(32, 33, 36);
+  background-color: rgb(24, 37, 54);
   border-bottom: solid 1px #444;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0.5rem 0 0 0;
   display: flex;
   justify-content: center;
   overflow: hidden;
@@ -27,7 +27,7 @@ html {
 
 .tocLayer1 {
   top: 0;
-  height: 1.875rem;
+  height: 1.75rem;
   z-index: 5;
 }
 
