--- a/src/blog/articles/tictactoe/GameTicTacToe.module.css
+++ b/src/blog/articles/tictactoe/GameTicTacToe.module.css
@@ -13,14 +13,6 @@
   aspect-ratio: 1 / 1;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-}
-
 .cell {
   display: flex;
   align-items: center;
@@ -29,7 +21,7 @@
   font-weight: bold;
   cursor: pointer;
   width: 100%;
-  aspect-ratio: 1 / 1;
+  height: 100%;
 }
 
 .cell:not(.winningCell) {
