update blog thumbnails and connect four styling

--- a/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.module.css
+++ b/src/blog/articles/ArticleGoogleFoobarChallenge/ArticleGoogleFoobarChallenge.module.css
@@ -2,6 +2,11 @@ html {
   scroll-padding-top: 1.75rem;
 }
 
+.challengeTitle {
+  font-size: 1.5rem;
+  margin: 1.25rem 0 0.625rem 0;
+}
+
 .foobarTaskDescription {
   font-family: "Share Tech Mono", monospace;
   font-size: 1rem;
