--- a/src/blog/articles/connectfour/GameConnectFour.module.css
+++ b/src/blog/articles/connectfour/GameConnectFour.module.css
@@ -1,21 +1,20 @@
 .gameBoard {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 6fr;
-  width: min(95%, 500px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: min(100%, 500px);
   margin: 0 auto;
-  background-color: white;
-  padding: min(0.5rem, 1%);
-  border-radius: 5%;
-  aspect-ratio: 1/1;
+  background-color: #eff6fc;
+  border-radius: 0.4rem;
 }
 
-.inputRow {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: 1fr;
-  border-left: min(0.25rem, 1vw) solid transparent;
-  border-right: min(0.25rem, 1vw) solid transparent;
+.headerMessage {
+  text-align: center;
+  font-weight: bold;
+  color: #324f75;
+  font-size: 1.375rem;
+  letter-spacing: 0.16rem;
+  margin-top: 0.5rem;
 }
 
 .slots {
@@ -23,9 +22,7 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 1fr;
-  border-radius: 4%;
-  overflow: hidden;
-  border: solid min(0.25rem, 1vw) black;
+  margin: 0.5rem 2rem 2rem 2rem;
 }
 
 .column {
@@ -34,64 +31,37 @@
   grid-template-rows: repeat(6, 1fr);
 }
 
-.cell,
-.slotCell {
-  padding: 12%;
+.cell {
+  padding: 16%;
   width: 100%;
   height: 100%;
+  aspect-ratio: 1/1;
 }
 
 .circle.R {
-  background-color: red;
+  background-color: #7fd7fd;
 }
 
 .circle.Y {
-  background-color: yellow;
-}
-
-.cell {
-  background-color: rgb(80, 80, 80);
+  background-color: #f8f778;
 }
 
 .circle {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: none;
   border-radius: 50%;
   margin: 0;
   padding: 0;
-}
-
-.circle:not(.slotCell .circle) {
-  border: min(0.25rem, 1vw) solid black;
-}
-
-.slotCell .circle.R {
-  border: min(0.1rem, 0.5vw) solid rgb(200, 0, 0);
-}
-
-.slotCell .circle.Y {
-  border: min(0.1rem, 0.5vw) solid rgb(200, 200, 0);
+  border: min(0.2rem, 1vw) solid #324f75;
 }
 
 .circle.R {
-  background-color: red;
+  background-color: #7fd7fd;
 }
 
 .circle.Y {
-  background-color: yellow;
-}
-
-.resetButton {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+  background-color: #f8f778;
 }
 
 .aiDifficulty {
@@ -107,4 +77,21 @@
   justify-content: center;
   gap: 0.2rem;
   margin: 1rem 1rem 0.5rem 0;
+}
+
+.settings {
+  background-color: #21314a;
+  border: 1px solid #324f75;
+  border-radius: 0.4rem;
+  width: 100%;
+  margin-top: 0.4rem;
+}
+
+.resetButton {
+  padding: 0.2rem;
+}
+
+.resetButton:hover {
+  background-color: #324f75;
+  color: #eff6fc;
 }
