--- a/src/blog/articles/connectfour/GameConnectFour.module.css
+++ b/src/blog/articles/connectfour/GameConnectFour.module.css
@@ -22,7 +22,7 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 1fr;
-  margin: 0.5rem 2rem 2rem 2rem;
+  margin: 0.5rem min(1.5rem, 6%) min(1.5rem, 6%) min(1.5rem, 6%);
 }
 
 .column {
@@ -31,8 +31,14 @@
   grid-template-rows: repeat(6, 1fr);
 }
 
+.slotConsider,
+.humanTurn:hover {
+  background-color: rgba(216, 227, 234, 0.7);
+  border-radius: 0.4rem;
+}
+
 .cell {
-  padding: 16%;
+  padding: 14%;
   width: 100%;
   height: 100%;
   aspect-ratio: 1/1;
@@ -68,15 +74,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.checkboxDiv {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-  gap: 0.2rem;
-  margin: 1rem 1rem 0.5rem 0;
 }
 
 .settings {
