connect four safari bug fix attempt

--- a/src/blog/articles/connectfour/GameConnectFour.module.css
+++ b/src/blog/articles/connectfour/GameConnectFour.module.css
@@ -23,6 +23,7 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: 1fr;
   margin: 0.5rem min(1.5rem, 6%) min(1.5rem, 6%) min(1.5rem, 6%);
+  aspect-ratio: 7 / 6;
 }
 
 .column {
